Add sector management controller for socios; implement endpoints to retrieve active sectors and statistics